# uhal-pypi

./: README.md  meson.build  pyproject.toml
.github/workflows/: wheels.yml
subprojects/: boost.wrap  ipbus-software.wrap
subprojects/packagefiles/boost/: meson.build
subprojects/packagefiles/ipbus-software/: generate_version.py  meson.build
subprojects/packagefiles/ipbus-software/uhal/uhal/include/uhal/: meson.build
subprojects/packagefiles/ipbus-software/uhal/uhal/src/common/: meson.build
